[package]
name = "janus-conference-logger"
version = "0.1.1"
authors = ["Timofey Martynov <t.martinov@netology-group.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
atom = "0.4"
chrono = "0.4"
crossbeam-channel = "0.5"
jansson-sys = "0.1"
regex = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
lazy_static = "1.4"
